# pk4Proj

./: .gitignore  CMakeLists.txt  README.md  Salon.cpp  Salon.h  ciezarowy.cpp  ciezarowy.h  dodajciezarowydialog.cpp  dodajciezarowydialog.h  dodajciezarowydialog.ui  dodajklientadialog.cpp  dodajklientadialog.h  dodajklientadialog.ui  dodajmotocykldialog.cpp  dodajmotocykldialog.h  dodajmotocykldialog.ui  dodajosobowydialog.cpp  dodajosobowydialog.h  dodajosobowydialog.ui  dodajpojazddialog.h  eksport.cpp  eksport.h  klient.cpp  klient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  motocykl.cpp  motocykl.h  osobowy.cpp  osobowy.h  pojazd.cpp  pojazd.h  resources.qrc  serwis.cpp  serwis.h  sprzedaz.cpp  sprzedaz.h  zapismanager.cpp  (+1 more)
